@@ -1,3 +1,4 @@
+dist: trusty
 language: java
 jdk: oraclejdk8
 install: true
